--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,9 @@ dependencies:
   shimmer: ^2.0.0
   google_sign_in:
   colours: ^0.0.2
+  flutter_svg: ^0.21.0+1
+  datetime_picker_formfield:
+  dropdownfield: ^1.0.3
 
 dev_dependencies:
   hive_generator: ^1.1.2
@@ -85,6 +88,8 @@ flutter_icons:
   image_path: "assets/logo.png"
   android: true
   ios: true
+  remove_alpha_ios: true
+
 
 
 
